// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment deals with custom style 1`] = `
<div>
  <p
    style="custom: true;"
  >
    &lt;http://example.com/#bla&gt;
  </p>
</div>
`;

exports[`Comment deals with missing container 1`] = `
<div>
  <p
    style="padding: 0.1em 1.5em; color: #888888; white-space: pre-wrap;"
  >
    &lt;http://example.com/#bla&gt;
  </p>
</div>
`;

exports[`Comment deals with missing content 1`] = `
<div>
  <p
    style="padding: 0.1em 1.5em; color: #888888; white-space: pre-wrap;"
  >
    Error: No contents in comment field.
  </p>
</div>
`;

exports[`Comment deals with missing field params in non-bottom field type 1`] = `
<div>
  <p>
    &lt;http://example.com/#bla&gt;
  </p>
</div>
`;

exports[`Comment runs 1`] = `
<div>
  <p
    style="padding: 0.1em 1.5em; color: #888888; white-space: pre-wrap;"
  >
    &lt;http://example.com/#bla&gt;
  </p>
</div>
`;
